--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@
   right: 0;
   left: 0;
   top: 0;
-  bottom: 10;
+  bottom: 80;
   margin: auto;
+  size: auto;
 
  
-  @media (min-width: 1200px) {
+  @media (min-width: 1400px) {
   .disable-app {
     display: none;
   }
@@ -34,13 +35,14 @@
   user-select: none;
   resize: both;
   -webkit-user-drag: none;
+  size: auto;
 }
 
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
-    margin-top: -30px;
+    margin-top: 70px;
   }
 }
 
